submit capstone project

--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -79,6 +79,7 @@
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/optimize_introduction">PortfolioOptimize</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ei_introduction">EarningsImpact</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/at_introduction">AlphaTest</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/hf_trading">HighFrequencyTrading</a></li>
 					</ul>
 
 					<ul class="navbar-nav ml-auto mt-2">
