--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -1,114 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>FRE Platform: {% block title %}{% endblock %}</title>
-        <!--link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"-->
-        <!--link href="https://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet"-->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/static/favicon.ico" rel="icon">
-        <link href="/static/styles.css" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        <!-- https://www.codexworld.com/export-html-table-data-to-csv-using-javascript/ -->
-        <script>
-            function downloadCSV(csv, filename) {
-            	var csvFile;
-            	var downloadLink;
+	<head>
 
-            	csvFile = new Blob([csv], {type: "text/csv"});
-            	downloadLink = document.createElement("a");
-            	downloadLink.download = filename;
-            	downloadLink.href = window.URL.createObjectURL(csvFile);
-            	downloadLink.style.display = "none";
-            	document.body.appendChild(downloadLink);
-            	downloadLink.click();
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<title>FRE Platform: {% block title %}{% endblock %}</title>
+		<!--link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"-->
+		<!--link href="https://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet"-->
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+
+		<link href="/static/favicon.ico" rel="icon">
+		<link href="/static/styles.css" rel="stylesheet">
+
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+		<!-- https://www.codexworld.com/export-html-table-data-to-csv-using-javascript/ -->
+		<script>
+			function downloadCSV(csv, filename) {
+				var csvFile;
+				var downloadLink;
+
+				csvFile = new Blob([csv], {type: "text/csv"});
+				downloadLink = document.createElement("a");
+				downloadLink.download = filename;
+				downloadLink.href = window.URL.createObjectURL(csvFile);
+				downloadLink.style.display = "none";
+				document.body.appendChild(downloadLink);
+				downloadLink.click();
+			}
+
+			function exportTableToCSV(filename) {
+				var csv = [];
+				var container = document.querySelector("#long-report")
+				var rows = container.querySelectorAll("table tr");
+				
+				for (var i = 0; i < rows.length; i++) {
+					var row = [], cols = rows[i].querySelectorAll("td, th");
+					
+					for (var j = 0; j < cols.length; j++) 
+						row.push(cols[j].innerText);
+					
+					csv.push(row.join(","));        
+				}
+
+				downloadCSV(csv.join("\n"), filename);
+			}
+			
+			function hideElement() {
+              var x = document.getElementById("long-report");
+              if (x.style.display === "none") {
+                  x.style.display = "block";
+              } 
+              else {
+                  x.style.display = "none";
+                  }
             }
+		</script>
+	</head>
 
-            function exportTableToCSV(filename) {
-            	var csv = [];
-            	var container = document.querySelector("#long-report")
-            	var rows = container.querySelectorAll("table tr");
+	<body>
+		<nav class="navbar navbar-toggleable-md navbar-custom navbar-expand-md navbar-dark border">
+			<a class="navbar-brand" href="/"><span class="blue"><b>FRE </b></span><span class="green"><b>Platform</b></span></a>
+			<button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbar">
+				{% if session.user_id %}
+					<ul class="navbar-nav mr-auto mt-2">
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/">ManualTrading</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/pair_trading">StatArb</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ai_modeling">AIModeling</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/sim_trading">SimTrading</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/md_sp500">MarketData</a></li>
+                        <li class="nav-item font-weight-bold"><nav-label for="Student Projects" style="color: lavender">
+                            &nbsp&nbsp&nbspStudent Projects:</nav-label>
+                            <select onChange="window.location.href=this.value">
+                                <option value=""></option>
+                                <option value="ap_introduction">AssetsPricing</option>
+                                <option value="optimize_introduction">PortfolioOptimize</option>
+                                <option value="ei_introduction">EarningsImpact</option>
+                                <option value="at_introduction">AlphaTest</option>
+				<option value="technical_indicator_strategy">TechIndSTRTG</option>
+                            </select>
+					</ul>
+					<ul class="navbar-nav ml-auto mt-2">
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/logout">Log Out</a></li>
+					</ul>
+				{% else %}
+					<ul class="navbar-nav ml-auto mt-2">
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/register">Register</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/login">Log In</a></li>
+					</ul>
+				{% endif %}
+			</div>
 
-            	for (var i = 0; i < rows.length; i++) {
-            		var row = [], cols = rows[i].querySelectorAll("td, th");
+		</nav>
 
-            		for (var j = 0; j < cols.length; j++)
-            			row.push(cols[j].innerText);
+		<div class="container-fluid">
+			{% if get_flashed_messages() %}
+				<header>
+					<br></br>
+					<div class="alert alert-primary alert-error border text-center" role="alert">
+						{{ get_flashed_messages() | join(" ") }}
+					</div>
+				</header>
+			{% endif %}
 
-            		csv.push(row.join(","));
-            	}
+			<div class="row">
+				{% block content %} {% endblock %}
+			</div>
+		</div>
 
-            	downloadCSV(csv.join("\n"), filename);
-            }
+		<footer class="small text-center text-muted">
+			<br>
+			Developed by <a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering">NYU FRE Department</a>. View <a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering">NYU FRE Terms of Use</a>.
+		</footer>
 
-            function hideElement() {
-                       var x = document.getElementById("long-report");
-                       if (x.style.display === "none") {
-                           x.style.display = "block";
-                       }
-                       else {
-                           x.style.display = "none";
-                           }
-                     }
-        </script>
-    </head>
-    <body>
-        <nav class="navbar navbar-toggleable-md navbar-custom navbar-expand-md navbar-dark border">
-            <a class="navbar-brand" href="/"><span class="blue"><b>FRE </b></span><span class="green"><b>Platform</b></span></a>
-            <button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                {% if session.user_id %}
-                <ul class="navbar-nav mr-auto mt-2">
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="/">ManualTrading</a></li>
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="/pair_trading">StatArb</a></li>
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="/ai_modeling">AIModeling</a></li>
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="/sim_trading">SimTrading</a></li>
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="/md_sp500">MarketData</a></li>
-                    <li class="nav-item font-weight-bold">
-                        <nav-label for="Student Projects" style="color: lavender">
-                            &nbsp&nbsp&nbspStudent Projects:
-                        </nav-label>
-                        <select onChange="window.location.href=this.value">
-                            <option value=""></option>
-                            <option value="ap_introduction">AssetsPricing</option>
-                            <option value="optimize_introduction">PortfolioOptimize</option>
-                            <option value="ei_introduction">EarningsImpact</option>
-                            <option value="at_introduction">AlphaTest</option>
-                            <option value="technical_indicator_strategy">TechIndSTRTG</option>
-                        </select>
-                </ul>
-                <ul class="navbar-nav ml-auto mt-2">
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="/logout">Log Out</a></li>
-                </ul>
-                {% else %}
-                <ul class="navbar-nav ml-auto mt-2">
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="/register">Register</a></li>
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="/login">Log In</a></li>
-                </ul>
-                {% endif %}
-            </div>
-        </nav>
-        <div class="container-fluid">
-            {% if get_flashed_messages() %}
-            <header>
-                <br></br>
-                <div class="alert alert-primary alert-error border text-center" role="alert">
-                    {{ get_flashed_messages() | join(" ") }}
-                </div>
-            </header>
-            {% endif %}
-            <div class="row">
-                {% block content %} {% endblock %}
-            </div>
-        </div>
-        <footer class="small text-center text-muted">
-            <br>
-            Developed by <a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering">NYU FRE Department</a>. View <a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering">NYU FRE Terms of Use</a>.
-        </footer>
-    </body>
+	</body>
+
 </html>
