--- a/system/templates/hf_trading_engine.html
+++ b/system/templates/hf_trading_engine.html
@@ -6,7 +6,7 @@
             <a class="nav-link" href="/hf_trading">Introduction</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/hf_cleaning_data">Data Cleaning</a>
+            <a class="nav-link" href="/hf_cleaning_data" style="pointer-events: none; color: gray">Data Cleaning</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/hf_trading_engine">Trading Engine</a>
