Asset pricing change

--- a/system/templates/ap_european_pricing.html
+++ b/system/templates/ap_european_pricing.html
@@ -47,6 +47,8 @@ img {
     <h3>Pricing European Option</h3>
     <div class="form-group">
         <form action="/ap_european_pricing" id="european" method="post">
+            <p style = "width:500px;" align="right"><b>Default stock price: Latest stock price of APPLE</b>
+                </p>
             <p style = "width:500px;" align="right">Spot Price:
                 <input id="spot" name="spot" value = {{input["spot"]}} type="text"/></p>
             <p style = "width:500px;" align="right">Strike Price:
