--- a/system/templates/ap_american_pricing.html
+++ b/system/templates/ap_american_pricing.html
@@ -40,6 +40,8 @@ American
     <h3>Pricing American Option</h3>
     <div class="form-group">
         <form action="/ap_american_pricing" id="American" method="post">
+            <p style = "width:500px;" align="right"><b>Default stock price: Latest stock price of APPLE</b>
+                </p>
             <p style = "width:500px;" align="right">Spot Price:
                 <input id="spot" name="spot" value = {{input["spot"]}} type="text"/></p>
             <p style = "width:500px;" align="right">Strike Price:
