Felix: Pair Trading with Unsupervised Learning

--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -86,6 +86,7 @@
               <option value="stockselect_introduction">StockSelect</option>
               <option value="technical_indicator_strategy">TechIndSTRTG</option>
               <option value="hf_trading">HighFrequencyTrading</option>
+              <option value="pair_ai_introduction">PairsTradingWithAI</option>
           </select>
 
 					</ul>
