--- a/system/templates/btc_backtest.html
+++ b/system/templates/btc_backtest.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-btc_introduction
+btc_backtest
 {% endblock %}
 {% block content %}
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
