--- a/system/templates/btc_introduction.html
+++ b/system/templates/btc_introduction.html
@@ -18,19 +18,80 @@ btc_introduction
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
-    <h3><strong>title</strong></h3>
+    <h3><strong>Bitcoin Algorithm Trading System</strong></h3>
     <br>
     <div align="center">
         <table cellspacing="0" cellpadding="0" border="0" style="font-family:Georgia, Garamond, Serif;">
             <tbody>
             <tr style="font-variant:small-caps;font-style:normal;color:black;font-size:20px;">
-            <tr>
-                <td width="881" valign="top">
-                    <p>
-                        body
-                    </p>
-                </td>
-            </tr>
+				<tr>
+					<td width="881" valign="top">
+						<p>
+							This module focus on trading Bitcoin with common used algorithms.
+						</p>
+					</td>
+				</tr>
+
+                <tr style="font-variant:small-caps;font-style:normal;color:black;font-size:20px;">
+					<th width="881" valign="top">
+						<strong>Background</strong>
+					</th>
+				</tr>
+
+                <tr>
+					<td width="881" valign="top">
+						<p>
+							Bitcoin is a decentralized currency without the need for a central bank or any middlemen,
+                            and was initially presented in 2008. It may be sent to and received from users using the peer-to-peer
+                            bitcoin network, where transactions are verified by nodes and stored on a blockchain. <br>
+                            In 2019, Bitcoin was first used after releasing as an open-source software. From then on, Bitcoin
+                            continued to be mined by other contributors and was used to buy goods.
+                            However, Bitcoin is widely used in black market causing heavy regulation in many countries. <br> <br>
+                            The algorithm trading is an idea to use program to automatically execute orders. In this module,
+                            we divided the common used algorithms into three categories: Trend, Momentum and Artificial Intelligence.
+                            Each category will include 2 to 3 algorithms.<br>
+						</p>
+					</td>
+				</tr>
+
+				<tr style="font-variant:small-caps;font-style:normal;color:black;font-size:20px;">
+					<th width="881" valign="top">
+						<strong>Algorithms Introduction</strong>
+					</th>
+				</tr>
+
+                <tr>
+					<td width="881" valign="top">
+						<p>
+							<strong>Trend</strong> <br>
+                            <h5>Filter</h5>
+                            Filter or Filter Rule is a method that uses price change to determine the trend. <br>
+                            The idea is that once the price changes, it may change in next few days with same trend. For example,
+                            a 5% increase in price may let the investor think that the price will increase 10% in next days. <br>
+                            <h5>SMA / EMA</h5>
+                            Simple or Exponential Moving Average are methods that use moving average to predict the future price. <br>
+                            In this strategy, there are often two moving average lines. One is for the short period and the other
+                            is for the long period. The short period line is changing quickly while the long period line is on the opposite. <br>
+                            When the short period line cross above the long period line, this indicates a buy signal and if the short period line
+                            cross below the long period line, this indicates a sell signal. <br>
+                            <h5></h5>
+						</p>
+					</td>
+				</tr>
+
+                <tr style="font-variant:small-caps;font-style:normal;color:black;font-size:20px;">
+					<th width="881" valign="top">
+						<strong>Back Testing</strong>
+					</th>
+				</tr>
+
+                <tr>
+					<td width="881" valign="top">
+						<p>
+							This module focus on trading Bitcoin with common used algorithms.
+						</p>
+					</td>
+				</tr>
             </tbody>
         </table>
     </div>
