fix(service/btc_algo/api): fix a bug causing unnormal profit in backtest

--- a/system/templates/btc_build.html
+++ b/system/templates/btc_build.html
@@ -125,9 +125,9 @@ btc_build
                     });
                     break;
                 case 'Combination':
-                    form.innerHTML = '<label style="width: 150px; display: inline-block; text-align: right">Start Date: </label> <input type="text" name="start_date" value="2020-01-01"> <br> <label style="width: 150px; display: inline-block; text-align: right">End Date: </label> <input type="text" name="end_date" value="2022-01-01"> <br> <label style="width: 150px; display: inline-block; text-align: right">Price Base: </label> <br> <input type="text" name="price_base" value="close">';
-                    form.innerHTML += '<button class="comboSubmit">Submit</button>';
-                    form.innerHTML += '<br> <input type="checkbox" name="method_list" value="Filter">Filter</input> \
+                    form.innerHTML = '<label style="width: 150px; display: inline-block; text-align: right">Start Date: </label> <input type="text" name="start_date" value="2020-01-01"> <br> <label style="width: 150px; display: inline-block; text-align: right">End Date: </label> <input type="text" name="end_date" value="2022-01-01"> <br> <label style="width: 150px; display: inline-block; text-align: right">Price Base: </label> <input type="text" name="price_base" value="close">';
+                    form.innerHTML += '<br> <button class="comboSubmit">Submit</button>';
+                    form.innerHTML += '<br> Algorithms: <input type="checkbox" name="method_list" value="Filter">Filter</input> \
                                 <input type="checkbox" name="method_list" value="SMA">SMA</input> \
                                 <input type="checkbox" name="method_list" value="EMA">EMA</input> \
                                 <input type="checkbox" name="method_list" value="MACD">MACD</input> \
