Fixed Income Securities Function finished

--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -89,6 +89,7 @@
               <option value="keltner_channel_strategy">KeltnerStrategy</option>
               <option value="Predict_based_optmize">PredictionBasedOptimization</option>
               <option value="pair_ai_introduction">PairsTradingWithAI</option>
+              <option value="fixed_income_trading">FixedIncomeSecuritiesTrading</option>
           </select>
 
                     </ul>
