--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -77,7 +77,7 @@
                         <li class="nav-item font-weight-bold"><a class="nav-link" href="/md_sp500">MarketData</a></li>
       <li class="nav-item font-weight-bold"><nav-label for="Student Projects" style="color: lavender">
           &nbsp&nbsp&nbspStudent Projects:</nav-label>
-          <select onChange="window.location.href=this.value">
+          <select onChange="window.location.pathname=this.value">
               <option value=""></option>
               <option value="ap_introduction">AssetsPricing</option>
               <option value="optimize_introduction">PortfolioOptimize</option>
