--- a/system/templates/btc_backtest.html
+++ b/system/templates/btc_backtest.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %}
+
 {% block title %}
 btc_backtest
 {% endblock %}
+
 {% block content %}
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
     <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-            <a class="nav-link active " href="/btc_introduction">Introduction</a>
+            <a class="nav-link" href="/btc_introduction">Introduction</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/btc_build/gate">Build Algorithm</a>
+            <a class="nav-link" href="/btc_build/gate">Build Algorithm</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/btc_backtest">Back Test</a>
+            <a class="nav-link active" href="/btc_backtest">Back Test</a>
         </li>
     </ul>
 </nav>
@@ -58,8 +60,5 @@ btc_backtest
         </table>
     </div>
 </main>
-<br></br>
-<br></br>
 
 {% endblock %}
-<br></br>
