--- a/system/templates/btc_build.html
+++ b/system/templates/btc_build.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
+
 {% block title %}
 btc_build
 {% endblock %}
-{% block content %}
 
+{% block content %}
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
     <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-            <a class="nav-link active " href="/btc_introduction">Introduction</a>
+            <a class="nav-link " href="/btc_introduction">Introduction</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/btc_build/gate">Build Algorithm</a>
+            <a class="nav-link active" href="/btc_build/gate">Build Algorithm</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/btc_backtest">Back Test</a>
+            <a class="nav-link" href="/btc_backtest">Back Test</a>
         </li>
     </ul>
 </nav>
@@ -151,8 +152,5 @@ btc_build
         });
     </script>
 </main>
-<br></br>
-<br></br>
 
 {% endblock %}
-<br></br>
