feat(service/btc_algo/template): add default value as value instead of placeholder

--- a/system/templates/btc_backtest.html
+++ b/system/templates/btc_backtest.html
@@ -24,15 +24,15 @@ btc_backtest
         <h3>Please enter basic info:</h3>
         <form action="/btc_backtest" method="get">
             <label style="width: 150px; display: inline-block; text-align: right">Initial Capital: </label>
-            <input type="text" name="initial_capital" placeholder="100000"> <br>
+            <input type="text" name="initial_capital" value="100000"> <br>
             <label style="width: 150px; display: inline-block; text-align: right">Execution Type: </label>
-            <input type="text" name="execution_type" placeholder="once or multiple"> <br>
+            <input type="text" name="execution_type" value="once or multiple"> <br>
             <label style="width: 150px; display: inline-block; text-align: right">Execution Amount: </label>
-            <input type="text" name="execution_amount" placeholder="10"> <br>
+            <input type="text" name="execution_amount" value="10"> <br>
             <label style="width: 150px; display: inline-block; text-align: right">Price Base: </label>
-            <input type="text" name="price_base" placeholder="close"> <br>
+            <input type="text" name="price_base" value="close"> <br>
             <label style="width: 150px; display: inline-block; text-align: right">Position Type: </label>
-            <input type="text" name="position_type" placeholder="both"> <br>
+            <input type="text" name="position_type" value="both"> <br>
             <button type="submit">Submit</button>
         </form>
     </div>
