feat(service/btc_algo/template): change the default value

--- a/system/templates/btc_backtest.html
+++ b/system/templates/btc_backtest.html
@@ -26,7 +26,7 @@ btc_backtest
             <label style="width: 150px; display: inline-block; text-align: right">Initial Capital: </label>
             <input type="text" name="initial_capital" value="100000"> <br>
             <label style="width: 150px; display: inline-block; text-align: right">Execution Type: </label>
-            <input type="text" name="execution_type" value="once or multiple"> <br>
+            <input type="text" name="execution_type" value="once"> <br>
             <label style="width: 150px; display: inline-block; text-align: right">Execution Amount: </label>
             <input type="text" name="execution_amount" value="10"> <br>
             <label style="width: 150px; display: inline-block; text-align: right">Price Base: </label>
