feat(service/btc_algo/template&api): change btc_data in global param from a value to a dict so that can enhance the backtest funciton including showing the current algorithm selection and not showing the matrix table for the first time

--- a/system/templates/btc_backtest.html
+++ b/system/templates/btc_backtest.html
@@ -36,6 +36,7 @@ btc_backtest
             <button type="submit">Submit</button>
         </form>
     </div>
+    {% if time != "first" %}
     <div class="table">
         <h3>Performance Table:</h3>
         <table class="table table-striped">
@@ -59,6 +60,7 @@ btc_backtest
             </tbody>
         </table>
     </div>
+    {% endif %}
 </main>
 
 {% endblock %}
